--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,23 @@ services:
   app:
     build:
       context: .
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./app:/app
+    ports:
+      - "8000:8000"
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:14-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=some_strong_password_123
+volumes:
+  postgres_data:
